<resources>
    <string name="app_name">Hej_Omra</string>
    <string name="howihram">Preparations for Ihram</string>
    <string name="allowinihram">allowed in ihram</string>
    <string name="notallowinihram">Prohibitions of Ihram</string>
    <string name="done">Done</string>
    <string name="amen">Amen</string>
    <string name="mosquedoaa">Mosque Doaa</string>
    <string name="sttart">Start </string>
    <string name="ibrahamshrine">Praying At Abraham shrine </string>
    <string name="decompisitionofihram">Decomposition of ihram </string>
    <string-array name="OmraListView">
        <item>Ihram</item>
        <item>Entering Masjid al-Haram</item>
        <item>Tawaaf</item>
        <item>Praying at the shrine</item>
        <item>Saey</item>
        <item>clipping of hair</item>
    </string-array>
    <string-array name="mahzuratList">
        <item>Showing head (men), Showing face (women)</item>
        <item>Showing the middle bone of the upper part of the feet (Both men and women))</item>
        <item>Shave / cut hair</item>
        <item>Cuting nails</item>
        <item>Wearing perfume</item>
        <item>Wearing stitched clothing (men) / (Women can wear their ordinay clothes)</item>
        <item>Hunting / killing</item>
        <item>Sex</item>
    </string-array>
    <string-array name="mosthbatIhram">
        <item>Comb your hair</item>
        <item>Wearing ihram clothes</item>
        <item>Taking a shower or wudu</item>
        <item>Comb your hair, shape the beard, trim your mustache</item>
        <item>declare your intention after praying</item>
        <item>TALBIYAH</item>
        <item>"Labbayk,
Allahumma Labbayk.
Labbayk.
La shareeka laka.
Labbayk.
Innal-hamda wan-n'imata
laka wal-mulk.
La shareeka lak."</item>
        <item>(Here we come,
O Allah, here we come !
Here we come.
No partner have You.
Here we come!
Praise indeed, and blessings, are Yours---
the Kingdom too!
No partner have You!)</item>
    </string-array>
    <string name="ArkanAlhej">Hajj Steps</string>
    <string-array name="sunnArray">
        <item>bathing before Ihram</item>
        <item>Wear Ihram</item>
        <item>Talbiyah</item>
        <item>stay overnight in Minna</item>
        <item>palms towards Hajre-e-Aswad and say:
" Bismillahi Allahu Akbar Wa Lilla Hil Hamd "
and drop your hands down. Now point the palms of your hands again towards Hajar-e- Aswad and kiss them. This act of kissing Hajar-e-Aswad or pointing towards it is called Istilam</item>
        <item>الإضطباع (جعل الرداء تحت الإبط الأيمن فى طواف القدوم أو العمره)</item>
        <item>الرمل(الإسراع فى الأشواط الثلاثه اللأولى من طواف القدوم أو العمره)</item>
        <item>طواف القدوم للقارن والمفرد</item>

    </string-array>
    <string-array name="mekatHeader">
        <item>ذو الحليفه</item>
        <item>الجحفه</item>
        <item>قرن المنازل</item>
        <item>يلملم</item>
        <item>ذات عرق</item>
    </string-array>
    <string-array name="mekatSubjevt">
        <item> ميقات أهل المدينه ومن جاء عن طريقهم ويسمهى اليوم أبيار على(450 كم عن مكه المكرمه)</item>
        <item>ميقات أهل الشام والمغرب ومصر ومن جاء عن طريقهم ويقع بالقرب من مدينه رابغ(183 كم عن مكه المكرمه)</item>
        <item>ميقات أهل نجد ومن جاء عن طريقهم ويسمى اليوم السيل الكبير ( 75كم عن مكه المكرمه) </item>
        <item>ميقات أهل اليمن ومن جاء عن طريقهم (92 كم عن مكه المكرمه) </item>
        <item>ميقات أهل العراق ومن جاء عن طريقهم(94 كم عن مكه المكرمه)</item>
    </string-array>
    <string-array name="morninngAzkar">
        <item>اللّهُ لاَ إِلَـهَ إِلاَّ هُوَ الْحَيُّ الْقَيُّومُ لاَ تَأْخُذُهُ سِنَةٌ وَلاَ نَوْمٌ لَّهُ مَا فِي السَّمَاوَاتِ وَمَا فِي الأَرْضِ مَن ذَا الَّذِي يَشْفَعُ عِنْدَهُ إِلاَّ بِإِذْنِهِ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهُمْ وَلاَ يُحِيطُونَ بِشَيْءٍ مِّنْ عِلْمِهِ إِلاَّ بِمَا شَاء وَسِعَ كُرْسِيُّهُ السَّمَاوَاتِ وَالأَرْضَ وَلاَ يَؤُودُهُ حِفْظُهُمَا وَهُوَ الْعَلِيُّ الْعَظِيمُ.(مره واحده) </item>
        <item>بِسْمِ اللهِ الرَّحْمنِ الرَّحِيم\n
        قُلْ هُوَ ٱللَّهُ أَحَدٌ، ٱللَّهُ ٱلصَّمَدُ، لَمْ يَلِدْ وَلَمْ يُولَدْ، وَلَمْ يَكُن لَّهُۥ كُفُوًا أَحَدٌۢ. (3 مرات)</item>
        <item>بِسْمِ اللهِ الرَّحْمنِ الرَّحِيم\n
        قُلْ أَعُوذُ بِرَبِّ ٱلْفَلَقِ، مِن شَرِّ مَا خَلَقَ، وَمِن شَرِّ غَاسِقٍ إِذَا وَقَبَ، وَمِن شَرِّ ٱلنَّفَّٰثَٰتِ فِى ٱلْعُقَدِ، وَمِن شَرِّ حَاسِدٍ إِذَا حَسَدَ.(3 مرات) </item>
        <item> بِسْمِ اللهِ الرَّحْمنِ الرَّحِيم\n
        قُلْ أَعُوذُ بِرَبِّ ٱلنَّاسِ، مَلِكِ ٱلنَّاسِ، إِلَٰهِ ٱلنَّاسِ، مِن شَرِّ ٱلْوَسْوَاسِ ٱلْخَنَّاسِ، ٱلَّذِى يُوَسْوِسُ فِى صُدُورِ ٱلنَّاسِ، مِنَ ٱلْجِنَّةِ وَٱلنَّاسِ.(3 مرات) </item>
        <item>أَصْـبَحْنا وَأَصْـبَحَ المُـلْكُ لله وَالحَمدُ لله ، لا إلهَ إلاّ اللّهُ وَحدَهُ لا شَريكَ لهُ، لهُ المُـلكُ ولهُ الحَمْـد، وهُوَ على كلّ شَيءٍ قدير ، رَبِّ أسْـأَلُـكَ خَـيرَ ما في هـذا اليوم وَخَـيرَ ما بَعْـدَه ، وَأَعـوذُ بِكَ مِنْ شَـرِّ ما في هـذا اليوم وَشَرِّ ما بَعْـدَه، رَبِّ أَعـوذُبِكَ مِنَ الْكَسَـلِ وَسـوءِ الْكِـبَر ، رَبِّ أَعـوذُ بِكَ مِنْ عَـذابٍ في النّـارِ وَعَـذابٍ في القَـبْر. (مره واحده)</item>
        <item>اللّهـمَّ أَنْتَ رَبِّـي لا إلهَ إلاّ أَنْتَ ، خَلَقْتَنـي وَأَنا عَبْـدُك ، وَأَنا عَلـى عَهْـدِكَ وَوَعْـدِكَ ما اسْتَـطَعْـت ، أَعـوذُبِكَ مِنْ شَـرِّ ما صَنَـعْت ، أَبـوءُ لَـكَ بِنِعْـمَتِـكَ عَلَـيَّ وَأَبـوءُ بِذَنْـبي فَاغْفـِرْ لي فَإِنَّـهُ لا يَغْـفِرُ الذُّنـوبَ إِلاّ أَنْتَ .(مره واحده)</item>
        <item>رَضيـتُ بِاللهِ رَبَّـاً وَبِالإسْلامِ ديـناً وَبِمُحَـمَّدٍ صلى الله عليه وسلم نَبِيّـاً.(3 مرات)</item>
        <item>اللّهُـمَّ إِنِّـي أَصْبَـحْتُ أُشْـهِدُك ، وَأُشْـهِدُ حَمَلَـةَ عَـرْشِـك ، وَمَلائِكَتِك ، وَجَمـيعَ خَلْـقِك ، أَنَّـكَ أَنْـتَ اللهُ لا إلهَ إلاّ أَنْـتَ وَحْـدَكَ لا شَريكَ لَـك ، وَأَنَّ ُ مُحَمّـداً عَبْـدُكَ وَرَسـولُـك.(4 مرات)</item>
        <item>اللّهُـمَّ ما أَصْبَـَحَ بي مِـنْ نِعْـمَةٍ أَو بِأَحَـدٍ مِـنْ خَلْـقِك ، فَمِـنْكَ وَحْـدَكَ لا شريكَ لَـك ، فَلَـكَ الْحَمْـدُ وَلَـكَ الشُّكْـر.(مره واحده)</item>
        <item>حَسْبِـيَ اللّهُ لا إلهَ إلاّ هُوَ عَلَـيهِ تَوَكَّـلتُ وَهُوَ رَبُّ العَرْشِ العَظـيم. (7 مرات)</item>
        <item>بِسـمِ اللهِ الذي لا يَضُـرُّ مَعَ اسمِـهِ شَيءٌ في الأرْضِ وَلا في السّمـاءِ وَهـوَ السّمـيعُ العَلـيم.(3 مرات)</item>
        <item>اللّهُـمَّ بِكَ أَصْـبَحْنا وَبِكَ أَمْسَـينا ، وَبِكَ نَحْـيا وَبِكَ نَمُـوتُ وَإِلَـيْكَ النُّـشُور. (مره واحده)</item>
        <item>أَصْبَـحْـنا عَلَى فِطْرَةِ الإسْلاَمِ، وَعَلَى كَلِمَةِ الإِخْلاَصِ، وَعَلَى دِينِ نَبِيِّنَا مُحَمَّدٍ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ، وَعَلَى مِلَّةِ أَبِينَا إبْرَاهِيمَ حَنِيفاً مُسْلِماً وَمَا كَانَ مِنَ المُشْرِكِينَ. (مره واحده)</item>
        <item>سُبْحـانَ اللهِ وَبِحَمْـدِهِ عَدَدَ خَلْـقِه ، وَرِضـا نَفْسِـه ، وَزِنَـةَ عَـرْشِـه ، وَمِـدادَ كَلِمـاتِـه.(3 مرات)</item>
        <item>اللّهُـمَّ عافِـني في بَدَنـي ، اللّهُـمَّ عافِـني في سَمْـعي ، اللّهُـمَّ عافِـني في بَصَـري ، لا إلهَ إلاّ أَنْـتَ. (3 مرات)</item>
        <item>اللّهُـمَّ إِنّـي أَعـوذُ بِكَ مِنَ الْكُـفر ، وَالفَـقْر ، وَأَعـوذُ بِكَ مِنْ عَذابِ القَـبْر ، لا إلهَ إلاّ أَنْـتَ.(3 مرات)</item>
        <item>اللّهُـمَّ إِنِّـي أسْـأَلُـكَ العَـفْوَ وَالعـافِـيةَ في الدُّنْـيا وَالآخِـرَة ، اللّهُـمَّ إِنِّـي أسْـأَلُـكَ العَـفْوَ وَالعـافِـيةَ في ديني وَدُنْـيايَ وَأهْـلي وَمالـي ، اللّهُـمَّ اسْتُـرْ عـوْراتي وَآمِـنْ رَوْعاتـي ، اللّهُـمَّ احْفَظْـني مِن بَـينِ يَدَيَّ وَمِن خَلْفـي وَعَن يَمـيني وَعَن شِمـالي ، وَمِن فَوْقـي ، وَأَعـوذُ بِعَظَمَـتِكَ أَن أُغْـتالَ مِن تَحْتـي. (مره واحده)</item>
        <item>يَا حَيُّ يَا قيُّومُ بِرَحْمَتِكَ أسْتَغِيثُ أصْلِحْ لِي شَأنِي كُلَّهُ وَلاَ تَكِلُنِي إلَى نَفْسِي طَـرْفَةَ عَيْنٍ. (3 مرات)</item>
        <item>أَصْبَـحْـنا وَأَصْبَـحْ المُـلكُ للهِ رَبِّ العـالَمـين ، اللّهُـمَّ إِنِّـي أسْـأَلُـكَ خَـيْرَ هـذا الـيَوْم ، فَـتْحَهُ ، وَنَصْـرَهُ ، وَنـورَهُ وَبَـرَكَتَـهُ ، وَهُـداهُ ، وَأَعـوذُ بِـكَ مِـنْ شَـرِّ ما فـيهِ وَشَـرِّ ما بَعْـدَه.(مره واحده)</item>
        <item>اللّهُـمَّ عالِـمَ الغَـيْبِ وَالشّـهادَةِ فاطِـرَ السّماواتِ وَالأرْضِ رَبَّ كـلِّ شَـيءٍ وَمَليـكَه ، أَشْهَـدُ أَنْ لا إِلـهَ إِلاّ أَنْت ، أَعـوذُ بِكَ مِن شَـرِّ نَفْسـي وَمِن شَـرِّ الشَّيْـطانِ وَشِـرْكِه ، وَأَنْ أَقْتَـرِفَ عَلـى نَفْسـي سوءاً أَوْ أَجُـرَّهُ إِلـى مُسْـلِم. (مره واحده)</item>
        <item>أَعـوذُ بِكَلِمـاتِ اللّهِ التّـامّـاتِ مِنْ شَـرِّ ما خَلَـق. (3 مرات)</item>
        <item>اللَّهُمَّ صَلِّ وَسَلِّمْ وَبَارِكْ على نَبِيِّنَا مُحمَّد. (10 مرات)</item>
        <item>اللَّهُمَّ إِنَّا نَعُوذُ بِكَ مِنْ أَنْ نُشْرِكَ بِكَ شَيْئًا نَعْلَمُهُ ، وَنَسْتَغْفِرُكَ لِمَا لَا نَعْلَمُهُ. (3 مرات)</item>
        <item>اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنْ الْهَمِّ وَالْحَزَنِ، وَأَعُوذُ بِكَ مِنْ الْعَجْزِ وَالْكَسَلِ، وَأَعُوذُ بِكَ مِنْ الْجُبْنِ وَالْبُخْلِ، وَأَعُوذُ بِكَ مِنْ غَلَبَةِ الدَّيْنِ، وَقَهْرِ الرِّجَالِ. (3 مرات)</item>
        <item>أسْتَغْفِرُ اللهَ العَظِيمَ الَّذِي لاَ إلَهَ إلاَّ هُوَ، الحَيُّ القَيُّومُ، وَأتُوبُ إلَيهِ. (3 مرات)</item>
        <item>يَا رَبِّ , لَكَ الْحَمْدُ كَمَا يَنْبَغِي لِجَلَالِ وَجْهِكَ , وَلِعَظِيمِ سُلْطَانِكَ.(3 مرات)</item>
        <item>اللَّهُمَّ إِنِّي أَسْأَلُكَ عِلْمًا نَافِعًا، وَرِزْقًا طَيِّبًا، وَعَمَلًا مُتَقَبَّلًا.(مره واحده)</item>
        <item>اللَّهُمَّ أَنْتَ رَبِّي لا إِلَهَ إِلا أَنْتَ ، عَلَيْكَ تَوَكَّلْتُ ، وَأَنْتَ رَبُّ الْعَرْشِ الْعَظِيمِ , مَا شَاءَ اللَّهُ كَانَ ، وَمَا لَمْ يَشَأْ لَمْ يَكُنْ ، وَلا حَوْلَ وَلا قُوَّةَ إِلا بِاللَّهِ الْعَلِيِّ الْعَظِيمِ , أَعْلَمُ أَنَّ اللَّهَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ ، وَأَنَّ اللَّهَ قَدْ أَحَاطَ بِكُلِّ شَيْءٍ عِلْمًا , اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنْ شَرِّ نَفْسِي ، وَمِنْ شَرِّ كُلِّ دَابَّةٍ أَنْتَ آخِذٌ بِنَاصِيَتِهَا ، إِنَّ رَبِّي عَلَى صِرَاطٍ مُسْتَقِيمٍ.(مره واحده)</item>
        <item>لَا إلَه إلّا اللهُ وَحْدَهُ لَا شَرِيكَ لَهُ، لَهُ الْمُلْكُ وَلَهُ الْحَمْدُ وَهُوَ عَلَى كُلُّ شَيْءِ قَدِيرِ.(100 مره)</item>
        <item>سُبْحـانَ اللهِ وَبِحَمْـدِهِ. (100 مره)</item>
        <item>أسْتَغْفِرُ اللهَ وَأتُوبُ إلَيْهِ(100 مره)</item>
    </string-array>
    <string name="WagebatAlhej">duties of Hajj            </string>
    <string name="SunnAlhej"> سنن الحج           </string>
    <string name="MahzuratAlhej"> محظورات الحج           </string>
    <string name="alhadi"> الهدى           </string>
    <string name="AnwaaAlhej">Hajj Types           </string>
    <string name="mornAzkar">أذكار الصباح</string>
    <string name="evenAzkar">أذكار المساء</string>
    <string name="prayAzkar">أذكار الصلاه</string>
    <string name="sleepAzkar">أذكار النوم</string>
    <string name="propheticClaim">أدعيه الأنبياء</string>
    <string name="quranClaim">ادعيه قرآنيه</string>
    <string name="elecRosary">السبحه الإلكترونيه</string>
    <string name="hajInfo">Haj Data</string>
    <string name="company"> Tourism Company Name</string>
    <string name="name">Your Name</string>
    <string name="Id">ID</string>
    <string name="nationality">Nationality</string>
    <string name="authorization">Authorization</string>
    <string name="munaCamp">Muna Camp</string>
    <string name="arafacamp">Arafa Camp</string>
    <string name="category">Category</string>
    <string name="khima">The Tent</string>
    <string name="mob"> Your Mobile</string>
    <string name="companyMob">Tourism Company Mobile</string>
    <string name="other">Other Data</string>
    <string name="save">Save Data</string>
    <string name="hotel">Hotel Name</string>
</resources>