<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    tools:context="com.example.hp.hej_omra.AzkarActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="#36acba"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/AppTheme.PopupOverlay" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        android:weightSum="2"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/azkarM_id"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/prayhand" />

            <TextView
                android:textColor="#01312b"
                android:text="@string/mornAzkar"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/azkarMtv" />




        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/azkarE_id"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/prayhand" />

            <TextView
                android:textColor="#01312b"
                android:text="@string/evenAzkar"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/azkarEtv" />




        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/azkarS_id"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/prayhand" />

            <TextView
                android:textColor="#01312b"
                android:text="@string/sleepAzkar"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/azkarStv" />




        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/azkarP_id"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/prayhand" />

            <TextView
                android:textColor="#01312b"
                android:text="@string/prayAzkar"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/azkarPtv" />




        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/adeyaPro_id"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/prayhand" />

            <TextView
                android:textColor="#01312b"
                android:text="@string/propheticClaim"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adeyaProtv" />




        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/adeyaQur_id"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/prayhand" />

            <TextView
                android:textColor="#01312b"
                android:text="@string/quranClaim"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adeyaQurtv" />




        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"

        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/sebhaIM"
            android:background="@drawable/prayhand"
            android:layout_width="80dp"

            android:layout_gravity="center"
            android:layout_height="70dp" />
        <TextView
           android:id="@+id/sebhaTV"
            android:text="@string/elecRosary"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#01312b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
