<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    tools:context="com.example.hp.hej_omra.AlHejActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent" >





    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"

        >
        <LinearLayout
            android:id="@+id/Arkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#40ffffff"
            android:orientation="horizontal"
            android:weightSum="2">
            <ImageView
                android:id="@+id/ArHejimageView"
                android:layout_width="15dp"
                android:layout_height="90dp"

                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/muslimpray" />
            <TextView
                android:id="@+id/ArHejtextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ArkanAlhej"
                android:textColor="#010813" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wagebat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#40ffffff"
            android:orientation="horizontal"
            android:weightSum="2">
            <ImageView
                android:id="@+id/WahejimageView"
                android:layout_width="15dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/muslimpray" />
            <TextView
                android:id="@+id/WaHejtextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/WagebatAlhej"
                android:textColor="#010813" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Sunn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#40ffffff"
            android:orientation="horizontal"
            android:weightSum="2">
            <ImageView
                android:id="@+id/SuHejimageView"
                android:layout_width="15dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/muslimpray" />
            <TextView
                android:id="@+id/SuHejtextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/SunnAlhej"
                android:textColor="#010813" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Mahzurat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#40ffffff"
            android:orientation="horizontal"
            android:weightSum="2">
            <ImageView
                android:id="@+id/MahHejimageView"
                android:layout_width="15dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/muslimpray" />
            <TextView
                android:id="@+id/MahHejtextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/MahzuratAlhej"
                android:textColor="#010813" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Hadi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#40ffffff"
            android:orientation="horizontal"
            android:weightSum="2">
            <ImageView
                android:id="@+id/HadiimageView"
                android:layout_width="15dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/muslimpray" />
            <TextView
                android:id="@+id/HaditextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/alhadi"
                android:textColor="#010813" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/Anwaa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#40ffffff"
            android:orientation="horizontal"
            android:weightSum="2">
            <ImageView
                android:id="@+id/AnwHejimageView"
                android:layout_width="15dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/muslimpray" />
            <TextView
                android:id="@+id/AnwHejtextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/AnwaaAlhej"
                android:textColor="#010813" />


        </LinearLayout>



    </LinearLayout>
    </ScrollView>

</LinearLayout>
